--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "core-js": "^3.25.3",
+    "fs": "0.0.1-security",
+    "glob-parent": "^5.1.2",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-google-charts": "^1.1.0",
